Fix success message in vehicle index page

--- a/Pages/Vehicules/Index.cshtml
+++ b/Pages/Vehicules/Index.cshtml
@@ -185,7 +185,7 @@
                     <circle class="checkmark-circle" cx="26" cy="26" r="25" fill="none" />
                     <path class="checkmark-check" fill="none" d="M14 27l7 7 16-16" />
                 </svg>
-                <p class="text-sm margin-0">@Model.FeedbackMessage Le véhicule {vehicule.Marque} {vehicule.Modele} a été supprimé avec succès.</p>
+                <p class="text-sm margin-0">@Model.FeedbackMessage</p>
             </div>
         </div>
     </div>
