--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -6,12 +6,22 @@
     <title>@ViewData["Title"] - LpAutomobile</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/catalogue.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LpAutomobile.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+     <!-- CSS spécifiques aux pages (conditionnels) -->
+    @if (ViewContext.RouteData.Values["page"]?.ToString().Contains("Catalogue") == true)
+    {
+        <link rel="stylesheet" href="~/css/catalogue.css" asp-append-version="true" />
+    }
+    
+    @if (ViewContext.RouteData.Values["page"]?.ToString().Contains("Details") == true)
+    {
+        <link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
+    }
 
 </head>
 <body>
