--- a/wwwroot/css/details.css
+++ b/wwwroot/css/details.css
@@ -414,7 +414,7 @@
    MODALS
    ================================= */
 
-.contact-modal, .photo-modal {
+.photo-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -429,7 +429,7 @@
     transition: all 0.3s ease;
 }
 
-    .contact-modal.show, .photo-modal.show {
+    .photo-modal.show {
         opacity: 1;
     }
 
@@ -448,10 +448,6 @@
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
     transform: translateY(20px);
     transition: all 0.3s ease;
-}
-
-.contact-modal.show .modal-content {
-    transform: translateY(0);
 }
 
 .modal-close, .photo-modal-close {
